// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CvInlineNotification should render correctly 1`] = `
<div data-notification="" role="alert" class="cv-inline-notification bx--inline-notification bx--inline-notification--error">
  <div class="bx--inline-notification__details">
    <errorfilled20-stub class="bx--inline-notification__icon"></errorfilled20-stub>
    <div class="bx--inline-notification__text-wrapper">
      <p class="bx--inline-notification__title"></p>
      <p class="bx--inline-notification__subtitle"></p>
    </div>
  </div> <button type="button" class="bx--inline-notification__action-button bx--btn bx--btn--sm bx--btn--ghost">
    test action label
  </button> <button type="button" aria-label="Dismiss notification" data-notification-btn="" class="bx--inline-notification__close-button">
    <close20-stub class="bx--inline-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvInlineNotification should render correctly 2`] = `
<div data-notification="" aria-live="polite" class="cv-inline-notification bx--inline-notification bx--inline-notification--info">
  <div class="bx--inline-notification__details">
    <informationfilled20-stub class="bx--inline-notification__icon"></informationfilled20-stub>
    <div class="bx--inline-notification__text-wrapper">
      <p class="bx--inline-notification__title"></p>
      <p class="bx--inline-notification__subtitle"></p>
    </div>
  </div> <button type="button" class="bx--inline-notification__action-button bx--btn bx--btn--sm bx--btn--ghost">
    test action label
  </button> <button type="button" aria-label="Dismiss notification" data-notification-btn="" class="bx--inline-notification__close-button">
    <close20-stub class="bx--inline-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvInlineNotification should render correctly 3`] = `
<div data-notification="" role="alert" class="cv-inline-notification bx--inline-notification bx--inline-notification--warning">
  <div class="bx--inline-notification__details">
    <warningfilled20-stub class="bx--inline-notification__icon"></warningfilled20-stub>
    <div class="bx--inline-notification__text-wrapper">
      <p class="bx--inline-notification__title"></p>
      <p class="bx--inline-notification__subtitle"></p>
    </div>
  </div> <button type="button" class="bx--inline-notification__action-button bx--btn bx--btn--sm bx--btn--ghost">
    test action label
  </button> <button type="button" aria-label="Dismiss notification" data-notification-btn="" class="bx--inline-notification__close-button">
    <close20-stub class="bx--inline-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvInlineNotification should render correctly 4`] = `
<div data-notification="" aria-live="polite" class="cv-inline-notification bx--inline-notification bx--inline-notification--success">
  <div class="bx--inline-notification__details">
    <checkmarkfilled20-stub class="bx--inline-notification__icon"></checkmarkfilled20-stub>
    <div class="bx--inline-notification__text-wrapper">
      <p class="bx--inline-notification__title"></p>
      <p class="bx--inline-notification__subtitle"></p>
    </div>
  </div> <button type="button" class="bx--inline-notification__action-button bx--btn bx--btn--sm bx--btn--ghost">
    test action label
  </button> <button type="button" aria-label="Dismiss notification" data-notification-btn="" class="bx--inline-notification__close-button">
    <close20-stub class="bx--inline-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvInlineNotification should render correctly when low contrast is used 1`] = `
<div data-notification="" role="alert" class="cv-inline-notification bx--inline-notification bx--inline-notification--error bx--inline-notification--low-contrast">
  <div class="bx--inline-notification__details">
    <errorfilled20-stub class="bx--inline-notification__icon"></errorfilled20-stub>
    <div class="bx--inline-notification__text-wrapper">
      <p class="bx--inline-notification__title"></p>
      <p class="bx--inline-notification__subtitle"></p>
    </div>
  </div> <button type="button" class="bx--inline-notification__action-button bx--btn bx--btn--sm bx--btn--ghost">
    test action label
  </button> <button type="button" aria-label="Dismiss notification" data-notification-btn="" class="bx--inline-notification__close-button">
    <close20-stub class="bx--inline-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvInlineNotification should render correctly when low contrast is used 2`] = `
<div data-notification="" aria-live="polite" class="cv-inline-notification bx--inline-notification bx--inline-notification--info bx--inline-notification--low-contrast">
  <div class="bx--inline-notification__details">
    <informationfilled20-stub class="bx--inline-notification__icon"></informationfilled20-stub>
    <div class="bx--inline-notification__text-wrapper">
      <p class="bx--inline-notification__title"></p>
      <p class="bx--inline-notification__subtitle"></p>
    </div>
  </div> <button type="button" class="bx--inline-notification__action-button bx--btn bx--btn--sm bx--btn--ghost">
    test action label
  </button> <button type="button" aria-label="Dismiss notification" data-notification-btn="" class="bx--inline-notification__close-button">
    <close20-stub class="bx--inline-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvInlineNotification should render correctly when low contrast is used 3`] = `
<div data-notification="" role="alert" class="cv-inline-notification bx--inline-notification bx--inline-notification--warning bx--inline-notification--low-contrast">
  <div class="bx--inline-notification__details">
    <warningfilled20-stub class="bx--inline-notification__icon"></warningfilled20-stub>
    <div class="bx--inline-notification__text-wrapper">
      <p class="bx--inline-notification__title"></p>
      <p class="bx--inline-notification__subtitle"></p>
    </div>
  </div> <button type="button" class="bx--inline-notification__action-button bx--btn bx--btn--sm bx--btn--ghost">
    test action label
  </button> <button type="button" aria-label="Dismiss notification" data-notification-btn="" class="bx--inline-notification__close-button">
    <close20-stub class="bx--inline-notification__close-icon"></close20-stub>
  </button>
</div>
`;

exports[`CvInlineNotification should render correctly when low contrast is used 4`] = `
<div data-notification="" aria-live="polite" class="cv-inline-notification bx--inline-notification bx--inline-notification--success bx--inline-notification--low-contrast">
  <div class="bx--inline-notification__details">
    <checkmarkfilled20-stub class="bx--inline-notification__icon"></checkmarkfilled20-stub>
    <div class="bx--inline-notification__text-wrapper">
      <p class="bx--inline-notification__title"></p>
      <p class="bx--inline-notification__subtitle"></p>
    </div>
  </div> <button type="button" class="bx--inline-notification__action-button bx--btn bx--btn--sm bx--btn--ghost">
    test action label
  </button> <button type="button" aria-label="Dismiss notification" data-notification-btn="" class="bx--inline-notification__close-button">
    <close20-stub class="bx--inline-notification__close-icon"></close20-stub>
  </button>
</div>
`;
